chore: auto-sync [2026-04-09 17:18 UTC] — 3 source files, 8 artifacts
